--- a/index.html
+++ b/index.html
@@ -3,65 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visor de PDF - ruddy.pdf</title>
+    <title>ruddy.pdf</title>
     <style>
-        body {
+        html, body {
             margin: 0;
             padding: 0;
-            background-color: #e9ecef;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        header {
-            background-color: #2c3e50;
-            color: white;
             width: 100%;
-            padding: 15px 0;
-            text-align: center;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            height: 100%;
+            overflow: hidden; /* Evita barras de desplazamiento innecesarias */
+            background-color: #333; /* Fondo oscuro por si el PDF tarda en cargar */
         }
-        .container {
-            width: 95%;
-            max-width: 1100px;
-            margin-top: 25px;
-            height: 85vh;
-        }
-        /* El elemento principal que carga el PDF */
         embed {
             width: 100%;
             height: 100%;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            background-color: white;
-        }
-        .footer-link {
-            margin-top: 15px;
-            font-size: 0.9rem;
-            color: #666;
-        }
-        .footer-link a {
-            color: #3498db;
-            text-decoration: none;
-            font-weight: bold;
+            border: none;
+            display: block;
         }
     </style>
 </head>
 <body>
 
-    <header>
-        <h1>Documento: ruddy.pdf</h1>
-    </header>
-
-    <div class="container">
-        <embed src="ruddy.pdf" type="application/pdf">
-        
-        <div class="footer-link">
-            ¿El PDF no carga? 
-            <a href="ruddy.pdf" download>Descargar archivo ruddy.pdf</a>
-        </div>
-    </div>
+    <embed src="ruddy.pdf" type="application/pdf">
 
 </body>
 </html>
