--- a/index.html
+++ b/index.html
@@ -3,21 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ruddy.pdf</title>
+    <title>Documento ruddy.pdf</title>
     <style>
+        /* CSS para que ocupe el 100% de la pantalla sin márgenes */
         html, body {
+            height: 100%;
+            width: 100%;
             margin: 0;
             padding: 0;
-            width: 100%;
-            height: 100%;
-            overflow: hidden; /* Evita barras de desplazamiento innecesarias */
-            background-color: #333; /* Fondo oscuro por si el PDF tarda en cargar */
+            overflow: hidden; /* Evita doble barra de desplazamiento */
+            background-color: #525659; /* Color de fondo típico de visores PDF */
         }
+        /* Configuración del elemento que incrusta el PDF */
         embed {
+            display: block;
             width: 100%;
             height: 100%;
             border: none;
-            display: block;
         }
     </style>
 </head>
