--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <script>
         // Asegúrate de que este nombre sea EXACTO al de tu archivo
-        const url = 'ruddyc.pdf';
+        const url = 'ruddyct.pdf';
 
         pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js';
 
